--- a/index.html
+++ b/index.html
@@ -87,15 +87,30 @@
         //DATE SORT
         var dateButton = document.getElementById("datebtn");
         dateButton.onclick = function() {
+            var sortedDate = currMsg;
+            sortedDate.sort(function(a, b) {
+                var dateA = new Date(a.date), dateB = new Date(b.date);
+                return dateA-dateB;
+            });
+
+            clearTable();
+
+            for(var i = 0; i < sortedDate.length; i++) {
+                addMail(sortedDate[i]);
+            }
         }
 
         //SENDER SORT
         var senderButton = document.getElementById("senderbtn");
         senderButton.onclick = function() {
             var sortedSender = currMsg;
-            sortedSender.sort(function(a, b) {
-                return a.Sender.localeCompare(b.Sender);
-            });
+            function sendAsc(a, b) {
+                var nameA = a.sender.toLowerCase(), nameB = b.sender.toLowerCase();
+                if (nameA < nameB) return -1;
+                else if (nameA > nameB) return 1;
+                else return 0;
+            };
+            sortedSender.sort(sendAsc);
             clearTable();
 
             for(var i = 0; i < sortedSender.length; i++) {
@@ -106,11 +121,24 @@
         //SUBJECT SORT
         var subjectButton = document.getElementById("subjectbtn");
         subjectButton.onclick = function() {
+            var sortedSubject = currMsg;
+            function subAsc(a, b) {
+                var subA = a.subject.toLowerCase(), subB = b.subject.toLowerCase();
+                if (subA < subB) return -1;
+                else if (subA > subB) return 1;
+                else return 0;
+            };
+            sortedSubject.sort(subAsc);
+            clearTable();
+
+            for(var i = 0; i < sortedSubject.length; i++) {
+                addMail(sortedSubject[i]);
+            }
         }
 
         var helpButton = document.getElementById("help");
         helpButton.onclick = function() {
-            alert("- To view an email simply click on the specified e-mail\n- To view/update e-mails click the red inbox button\n");
+            alert("- To view an email simply click on the specified e-mail\n- To view/update e-mails click the red inbox button\n- To view e-mails in ascending order simply click any of the categories (i.e, by sender)");
         }
 
       };
